--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Банер -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-btn"><p class="hero-btn-color">Заказать услугу</p></button>
+            <button class="hero-btn"><span class="hero-btn-color">Заказать услугу</span></button>
         </section>
 
         <!-- Для чего Вам это -->
