--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Шапка -->
     <header class="header">
-        <a class="header-link" href="/index.html" lang="en">WebStudio</a>
+        <a class="header-link" href="/index.html" lang="en">Web<span class="logo-primary">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a class="header-item" href="">Студия</a></li>
@@ -119,7 +119,7 @@
 
     <!-- Подвал -->
     <footer class="footer">
-        <a class="footer-link" href="/index.html" lang="en">WebStudio</a>
+        <a class="footer-link" href="/index.html" lang="en">Web<span class="logo-secondary">Studio</span></a>
         <address class="footer-adres">
             <ul class="footer-list">
                 <li class="footer-item"><a href="http://goo.gl/maps/y68GMaV9kRyxERHZA" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
