--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Шапка -->
     <header class="header">
+        <!-- Лого -->
         <a class="header-link" href="/index.html" lang="en">Web<span class="logo-primary">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
