--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header class="header">
+        <!-- Лого -->
         <a class="header-link" href="/index.html" lang="en">Web<span class="logo-primary">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
