--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
         <!-- Свои стили -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     
 </head>
 <body>
@@ -19,17 +19,17 @@
     <!-- Шапка -->
     <header class="header">
         <!-- Лого -->
-        <a class="header-link" href="/index.html" lang="en">Web<span class="logo-primary">Studio</span></a>
+        <a class="header-link link" href="./index.html" lang="en"><h2>Web<span class="logo-primary">Studio</span></h2></a>
         <nav class="header-nav">
-            <ul class="header-list">
-                <li><a class="header-item" href="">Студия</a></li>
-                <li><a class="header-item" href="/portfolio.html">Портфолио</a></li>
-                <li><a class="header-item" href="">Контакты</a></li>
+            <ul class="header-list  list">
+                <li><a class="header-item link" href="">Студия</a></li>
+                <li><a class="header-item link" href="/portfolio.html">Портфолио</a></li>
+                <li><a class="header-item link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-adress list">
+            <li><a class="header-mail link" href="mailto:info@devstudio.com"><span class="header-item-txt">info@devstudio.com</span></a></li>
+            <li><a class="header-phone link" href="tel:+380961111111"><span class="header-item-txt">+38 096 111 11 11</span></a></li>
         </ul>
     </header>
     
@@ -44,7 +44,7 @@
         <!-- Для чего Вам это -->
         <section class="about">
             <!-- <h2 class="title">Наши преимущества</h2> -->
-            <ul class="about-list">
+            <ul class="about-list list">
                 <li class="about-item">
                     <h3 class="subtitle">Внимание к деталям</h3>
                     <p class="about-descr">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -67,7 +67,7 @@
         <!-- Галерея -->
         <section class="galery">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="galery-list">
+            <ul class="galery-list list">
                 <li class="galery-item">
                 <img src="./images/img.jpg" alt="Рабочий процес"
                     width="370" height="294">
@@ -86,7 +86,7 @@
         <!-- Команда -->
         <section class="team">
             <h2 class="title">Наша команда</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-item">
                 <img src="./images/Team/Igor.jpg" alt="Игорь Демьяненко"
                      width="270" height="260">
@@ -120,12 +120,12 @@
 
     <!-- Подвал -->
     <footer class="footer">
-        <a class="footer-link" href="/index.html" lang="en">Web<span class="logo-secondary">Studio</span></a>
+        <a class="footer-link link" href="./index.html" lang="en"><h2>Web<span class="logo-secondary">Studio</span></h2></a>
         <address class="footer-adres">
-            <ul class="footer-list">
-                <li class="footer-item"><a href="http://goo.gl/maps/y68GMaV9kRyxERHZA" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="footer-item"><a href="mailto:info@example.com">info@example.com</a></li>
-                <li class="footer-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="footer-list list">
+                <li class=""><a class="footer-gps link" href="http://goo.gl/maps/y68GMaV9kRyxERHZA" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class=""><a class="footer-mail link" href="mailto:info@example.com">info@example.com</a></li>
+                <li class=""><a class="footer-phone link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
