--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a class="header-link link" href="./index.html" lang="en"><h2>Web<span class="logo-primary">Studio</span></h2></a>
         <nav class="header-nav">
             <ul class="header-list  list">
-                <li><a class="header-item link" href="">Студия</a></li>
-                <li><a class="header-item link" href="/portfolio.html">Портфолио</a></li>
+                <li><a class="header-item link" href="./index.html">Студия</a></li>
+                <li><a class="header-item link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="header-item link" href="">Контакты</a></li>
             </ul>
         </nav>
